stuff works now

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,9 @@ notifications:
   email:
     recipients:
       - pyrosrppltoo@gmail.com
+
 jdk:
   - oraclejdk8
 
 script:
-  - sbt clean jacoco
-  
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - sbt clean
